--- a/css/modal.css
+++ b/css/modal.css
@@ -1,17 +1,55 @@
+.my-modal {
+}
+
+.my-modal.open .my-modal-overlay,
+.my-modal.open .my-modal-window {
+  opacity: 1;
+  z-index: 1000;
+}
+
+.my-modal.hide .my-modal-overlay,
+.my-modal.hide .my-modal-window {
+  opacity: 1;
+  z-index: 1000;
+}
+
+.my-modal.open .my-modal-window {
+  transform: translateY(100px);
+}
+.my-modal.open .my-modal-overlay {
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.my-modal.hide .my-modal-window {
+  transform: translateY(-200px);
+}
+.my-modal.hide .my-modal-overlay {
+  background: rgba(0, 0, 0, 0);
+}
+
+.my-modal-window,
+.my-modal-overlay {
+  opacity: 0;
+  z-index: -1;
+}
+
 .my-modal-overlay {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0);
+  transition: background 500ms ease-in;
 }
 
 .my-modal-window {
   width: 600px;
   border-radius: 5px;
   background: white;
-  margin: 100px auto;
+  margin: 0 auto;
+  transform: translateY(-200px);
+  transition: transform 200ms ease-in;
 }
 
 .my-modal-header {
