--- a/css/modal.css
+++ b/css/modal.css
@@ -79,3 +79,19 @@
   padding: 5px 10px;
   border-top: 2px solid #eee;
 }
+
+.container {
+  width: 90vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.my-title {
+  width: 90vw;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px !important;
+}
